--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
     <title>HTML Academy: Седона</title>
     <link rel="preload" href="fonts/ptsans.woff2" type="font/woff2" as="font" crossorigin="anonymous">
     <link rel="preload" href="fonts/ptsansbold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <script>
       document.createElement( "picture" );
     </script>
@@ -29,7 +29,7 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list menu">
             <li class="menu__item menu__item--active"><a>Главная</a></li>
-            <li class="menu__item"><a href="photo.html">Фото и видео</a></li>
+            <li class="menu__item menu__item"><a href="photo.html">Фото и видео</a></li>
             <li class="menu__item"><a href="form.html">Форма отзыва</a></li>
             <li class="menu__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a></li>
           </ul>
@@ -220,6 +220,6 @@
     <script>
       document.querySelector('.map__interactive').classList.remove('map__interactive--nojs');
     </script>
-    <script src="./js/app.js"></script>
+    <script src="./js/app.min.js"></script>
   </body>
 </html>
