--- a/source/photo.html
+++ b/source/photo.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Седона</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <script>
       document.createElement( "picture" );
     </script>
@@ -180,11 +180,14 @@
               <div class="panel__opacity"></div>
               <div class="panel__bar">
                 <div class="panel__timeline"></div>
-                <button class="panel__slider" type="button"><span class="visually-hidden">Ползунок выбора начала просмотра</span></button>
+                <!-- <button class="panel__slider" type="button"><span class="visually-hidden">Ползунок выбора начала просмотра</span></button> -->
                 <div class="panel__buttons">
                   <button class="panel__btn panel__btn--replay" type="button"><span class="visually-hidden">Перемотать назад</span>
                     <svg class="panel__icon" width="16" height="20" focusable="false"><use xlink:href="img/sprite.svg#icon-video-replay"></use></svg>
                   </button>
+
+                  <button class="panel__btn panel__btn--slider" type="button"><span class="visually-hidden">Ползунок выбора начала просмотра</span></button>
+
                   <button class="panel__btn panel__btn--cc" type="button"><span class="visually-hidden">Включить субтитры</span>
                     <svg class="panel__icon" width="32" height="20" focusable="false"><use xlink:href="img/sprite.svg#icon-video-subtitles"></use></svg>
                   </button>
@@ -234,7 +237,6 @@
       </div>
     </footer>
 
-    <script src="./js/app.js"></script>
-    <script src="./js/focus.js"></script>
+    <script src="./js/app.min.js"></script>
   </body>
 </html>
