--- a/source/form.html
+++ b/source/form.html
@@ -35,24 +35,20 @@
         </div>
       </nav>
     </header>
-
     <main class="page-main">
       <h1 class="visually-hidden">Отзыв о посещении достопримечательностей Седоны</h1>
-
       <section class="promo promo--small">
         <h2 class="visually-hidden">Добро пожаловать в Седону</h2>
         <div class="promo__picture promo__picture--small">
           <img class="promo__image" src="img/text-sedona.svg" width="229" height="39" alt="Welcome to the gardeous Sedona">
         </div>
       </section>
-
       <section class="reviews wrapper wrapper--form">
-        <div class="rewiews__info">
+        <div class="reviews__info">
           <h2 class="reviews__title">Оставьте свой отзыв</h2>
           <p class="reviews__text">Помогите нашим отелям стать лучше! оставьте отзыв о них, а также о посещенных вами достопримечательностях
           </p>
         </div>
-
         <form class="reviews__form form" action="https://echo.htmlacademy.ru" method="post">
           <div class="form__item form__item--impression impression">
             <h2 class="form__legend impression__title">Ваше общее впечатление:</h2>
@@ -71,7 +67,6 @@
               </div>
             </div>
           </div>
-
           <div class="form__item form__item--person person">
             <h2 class="form__legend person__title">Представьтесь:</h2>
             <div class="person__block">
@@ -79,19 +74,16 @@
                 <label class="person__item-label" for="id_firstname">Имя<span>*</span>:</label>
                 <input class="person__item-input" name="firstname" id="id_firstname" type="text" placeholder="Петр" required>
               </div>
-
               <div class="person__item">
                 <label class="person__item-label" for="id_lastname">Фамилия<span>*</span>:</label>
                 <input class="person__item-input" name="lastname" id="id_lastname" type="text" placeholder="Иванов" required>
               </div>
-
               <div class="person__item">
                 <label class="person__item-label" for="id_middlename">Отчество<span>*</span>:</label>
                 <input class="person__item-input" name="middlename" id="id_middlename" type="text" placeholder="Александрович" required>
               </div>
             </div>
           </div>
-
           <div class="form__item form__item--contact contact">
             <h2 class="form__legend contact__title line line--contact">Контактная информация:</h2>
             <div class="contact__block">
@@ -115,10 +107,8 @@
               </div>
             </div>
           </div>
-
           <div class="form__item form__item--visited visited">
             <h2 class="form__legend visited__title line line--visited">Посещенные достопримечательности:</h2>
-
               <div class="visited__block">
                 <div class="visited__item">
                   <input class="visited__input visually-hidden" name="visited_devils_bridge" id="id-vis1" type="checkbox" checked>
@@ -139,9 +129,7 @@
                   <label class="visited__label" for="id-vis4">Красные скалы</label>
                 </div>
               </div>
-
           </div>
-
           <div class="form__item form__item--emotions emotions">
             <h2 class="form__legend emotions__title line line--emotions">Опишите свои эмоции:</h2>
             <textarea class="emotions__text" name="emotions" cols="40" rows="8" maxlength="1000" placeholder="Опишите подробно все свои восторги"></textarea>
@@ -150,11 +138,9 @@
             <button class="form__button">Отправить отзыв</button>
             <p class="form__footnote">* &nbsp;&ndash;&nbsp; обязательные поля</p>
           </div>
-
         </form>
       </section>
     </main>
-
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <p class="page-footer__visit">
@@ -179,7 +165,6 @@
             </li>
           </ul>
         </div>
-
         <div class="page-footer__copyright copyright">
           <p class="copyright__text">Разработано</p>
           <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive" area-label="link to HTMLAcademy">
