--- a/source/form.html
+++ b/source/form.html
@@ -18,8 +18,8 @@
     <header class="page-header">
       <a href="./index.html" class="page-header__logo">
         <picture>
-          <source media="(min-width:1200px)" srcset="./img/logo-sedona-desktop.svg 188w">
-          <source media="(min-width:768px)" srcset="./img/logo-sedona-tablet.svg 102w">
+          <source media="(min-width:1200px)" srcset="./img/logo-sedona-desktop.svg">
+          <source media="(min-width:768px)" srcset="./img/logo-sedona-tablet.svg">
           <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип городка Седона">
         </picture>
       </a>
@@ -90,7 +90,7 @@
               <div class="contact__item">
                 <label class="contact__label" for="id_phone"><span class="contact__label2">Контактный</span> телефон<span>*</span>:</label>
                 <div class="contact__wrap">
-                  <input class="contact__input" type="tel" name="phone" id="id_phone" type="text" placeholder="Введите телефон" required>
+                  <input class="contact__input" name="phone" id="id_phone" type="tel" placeholder="Введите телефон" required>
                   <div class="contact__icon-wrap">
                     <svg class="contact__icon" width="18" height="18" role="img" aria-label="Изображение телефона" focusable="false"><use xlink:href="img/sprite.svg#icon-phone"></use></svg>
                   </div>
@@ -167,7 +167,8 @@
         </div>
         <div class="page-footer__copyright copyright">
           <p class="copyright__text">Разработано</p>
-          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive" area-label="link to HTMLAcademy">
+          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="visually-hidden">link to HTMLAcademy</span>
             <svg width="27" height="34" role="img" focusable="false"><use xlink:href="img/sprite.svg#logo-htmlacademy"></use></svg>
           </a>
         </div>
