--- a/source/index.html
+++ b/source/index.html
@@ -18,8 +18,8 @@
     <header class="page-header">
       <a class="page-header__logo">
         <picture>
-          <source media="(min-width:1200px)" srcset="img/logo-sedona-desktop.svg 188w">
-          <source media="(min-width:768px)" srcset="img/logo-sedona-tablet.svg 102w">
+          <source media="(min-width:1200px)" srcset="img/logo-sedona-desktop.svg">
+          <source media="(min-width:768px)" srcset="img/logo-sedona-tablet.svg">
           <img class="page-header__logo-image" src="img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип городка Седона">
         </picture>
       </a>
@@ -168,7 +168,7 @@
             </picture>
           </div>
         </noscript>
-        <iframe class="map__interactive map__interactive--nojs" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1973979.2506306162!2d-112.99689112967489!3d34.8085026977851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872dbe91db5abf7b%3A0x6b38c28b698d0d4a!2sCoconino%20National%20Forest!5e0!3m2!1sru!2sru!4v1585496367469!5m2!1sru!2sru" width="100%" height="350" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        <iframe class="map__interactive map__interactive--nojs" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1973979.2506306162!2d-112.99689112967489!3d34.8085026977851!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872dbe91db5abf7b%3A0x6b38c28b698d0d4a!2sCoconino%20National%20Forest!5e0!3m2!1sru!2sru!4v1585496367469!5m2!1sru!2sru" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         <svg class="map__marker" width="27" height="27" role="img" aria-label="Маркер на карте"><use xlink:href="img/sprite.svg#icon-map-marker"></use></svg>
       </section>
     </main>
@@ -198,7 +198,8 @@
         </div>
         <div class="page-footer__copyright copyright">
           <p class="copyright__text">Разработано</p>
-          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive" area-label="link to HTMLAcademy">
+          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="visually-hidden">link to HTMLAcademy</span>
             <svg width="27" height="34" role="img" focusable="false"><use xlink:href="img/sprite.svg#logo-htmlacademy"></use></svg>
           </a>
         </div>
