--- a/source/photo.html
+++ b/source/photo.html
@@ -18,8 +18,8 @@
     <header class="page-header">
       <a href="./index.html" class="page-header__logo">
         <picture>
-          <source media="(min-width:1200px)" srcset="./img/logo-sedona-desktop.svg 188w">
-          <source media="(min-width:768px)" srcset="./img/logo-sedona-tablet.svg 102w">
+          <source media="(min-width:1200px)" srcset="./img/logo-sedona-desktop.svg">
+          <source media="(min-width:768px)" srcset="./img/logo-sedona-tablet.svg">
           <img class="page-header__logo-image" src="./img/logo-sedona-mobile.svg" width="102" height="83" alt="Логотип городка Седона">
         </picture>
       </a>
@@ -27,7 +27,7 @@
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
           <ul class="main-nav__list menu">
-            <li class="menu__item"><a a href="index.html">Главная</a></li>
+            <li class="menu__item"><a href="index.html">Главная</a></li>
             <li class="menu__item menu__item--active"><a>Фото и видео</a></li>
             <li class="menu__item"><a href="form.html">Форма отзыва</a></li>
             <li class="menu__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a></li>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="p__evaluation">
                   <span class="visually-hidden">Оценка фотографии:</span>
-                  <svg class="p__evaluation-like" width="22" height="20" role="img" area-label="like it" focusable="false"><use xlink:href="img/sprite.svg#icon-like"></use></svg>
+                  <svg class="p__evaluation-like" width="22" height="20" role="img" focusable="false"><use xlink:href="img/sprite.svg#icon-like"></use></svg>
                   <p class="p__evaluation-value">1350</p>
                 </div>
               </div>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="p__evaluation">
                   <span class="visually-hidden">Оценка фотографии:</span>
-                  <svg class="p__evaluation-like" width="22" height="20" role="img" area-label="like it" focusable="false"><use xlink:href="img/sprite.svg#icon-like"></use></svg>
+                  <svg class="p__evaluation-like" width="22" height="20" role="img" focusable="false"><use xlink:href="img/sprite.svg#icon-like"></use></svg>
                   <p class="p__evaluation-value">143</p>
                 </div>
               </div>
@@ -120,7 +120,7 @@
                 </div>
                 <div class="p__evaluation">
                   <span class="visually-hidden">Оценка фотографии:</span>
-                  <svg class="p__evaluation-like" width="22" height="20" role="img" area-label="like it" focusable="false"><use xlink:href="img/sprite.svg#icon-like"></use></svg>
+                  <svg class="p__evaluation-like" width="22" height="20" role="img" focusable="false"><use xlink:href="img/sprite.svg#icon-like"></use></svg>
                   <p class="p__evaluation-value">96</p>
                 </div>
               </div>
@@ -145,7 +145,7 @@
                 </div>
                 <div class="p__evaluation">
                   <span class="visually-hidden">Оценка фотографии:</span>
-                  <svg class="p__evaluation-like" width="22" height="20" role="img" area-label="like it" focusable="false"><use xlink:href="img/sprite.svg#icon-like"></use></svg>
+                  <svg class="p__evaluation-like" width="22" height="20" role="img" focusable="false"><use xlink:href="img/sprite.svg#icon-like"></use></svg>
                   <p class="p__evaluation-value">254</p>
                 </div>
               </div>
@@ -223,7 +223,8 @@
         </div>
         <div class="page-footer__copyright copyright">
           <p class="copyright__text">Разработано</p>
-          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive" area-label="link to HTMLAcademy">
+          <a class="button copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="visually-hidden">link to HTMLAcademy</span>
             <svg width="27" height="34" role="img" focusable="false"><use xlink:href="img/sprite.svg#logo-htmlacademy"></use></svg>
           </a>
         </div>
