--- a/source/index.html
+++ b/source/index.html
@@ -71,29 +71,20 @@
       </section>
       <section class="advantage-living">
         <h2 class="visually-hidden">Преимущества по проживанию</h2>
-        <ul class="advantage-living__list living">
+        <ul class="advantage-living__list living x">
           <li class="living__item living__item--house">
-            <div class="living__photo living__photo--house">
-              <img class="living__image" src="./img/icon-house.svg" width="37" height="36" alt="Иконка жилья">
-            </div>
             <div class="living__wrap">
               <h3 class="living__title">Жильё</h3>
               <p class="living__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </div>
           </li>
           <li class="living__item living__item--souvenirs">
-            <div class="living__photo living__photo--souvenirs">
-              <img class="living__image" src="./img/icon-gift.svg" width="32" height="38" alt="Иконка сувениров">
-            </div>
             <div class="living__wrap">
               <h3 class="living__title">Сувениры</h3>
               <p class="living__text">Не только китайского,<br> но и местного производства!</p>
             </div>
           </li>
           <li class="living__item living__item--food">
-            <div class="living__photo living__photo--food">
-              <img class="living__image" src="./img/icon-burger.svg" width="40" height="35" alt="Иконка еды">
-            </div>
             <div class="living__wrap">
               <h3 class="living__title">Еда</h3>
               <p class="living__text">Всегда заказывайте фирменный бургер,<br> вы не разочаруетесь!</p>
